@@ -36,6 +36,7 @@ changelog.txt uses a syntax similar to RST, with a few special sequences:
 ## New Plugins
 
 ## Fixes
+- ``widgets.WrappedLabel``: no longer resets scroll position when window is moved or resized
 
 ## Misc Improvements
 - Scrollable widgets now react to mouse wheel events when the mouse is over the widget
